Created home section and added content + updated CSS attributes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Home | Asish-Dewan </title>
+
+    <!-- Shortcut icon -->
+    <link rel=" " href="" type="image/x-icon ">
 <!--CSS link -->
     <link rel="stylesheet" href="./assets/style.css">
 
@@ -17,7 +20,7 @@
 <body>
 <!--Header-->    
     <header>
-        <!--Nav -->
+        <!---------------- Nav Section ---------------->
         <div class="nav container">
             <!-- Logo -->
             <a href="#" class="logo"> Asish-Dewan </a>
@@ -30,6 +33,32 @@
 
         </div>
     </header>
+
+    <!---------------- Home Section ---------------->
+<section class="home" id="'home"> 
+    <div class="social">
+        <a href=""> <i class= "bx bxl-github"> </i> </a>
+        <a href=""> <i class= "bx bxl-instagram" > </i> </a>
+        <a href=""> <i class=" bx bxl-facebook-square"></i> </a>
+
+    </div>
+
+</section>
+<!-- Home image -->
+<div class="home-img">
+    <img src="./assets/images/B-mo.png" alt= "Profile picture">
+</div>
+
+<!-- Home content-->
+<div class="home-text">
+    <span> Hello, I'm </span>
+    <h1> Asish </h1>
+    <h2> Front-end developer </h2>
+    <p> Description </p>
+
+<!-- Contact button -->
+<a href="" class= "button">Contact Me</a> 
+</div>
 
 </body>
 
