Updated Nav bar layout

--- a/index.html
+++ b/index.html
@@ -18,24 +18,20 @@
 </head>
 
 <body>
-<!--Header-->    
     <header>
-        <!---------------- Nav Section ---------------->
-        <div class="nav container">
-            <!-- Logo -->
-            <a href="#" class="logo"> Asish-Dewan </a>
-            <!-- Nav bar-->
-            <ul class ="navbar"> </ul>
-                <li> <a href="#Home" class="nav-link"></a> Home </li>
-                <li> <a href="#About" class="nav-link"></a> About </li>
-                <li> <a href="#Contact" class="nav-link"></a> Contact </li>
-                <li> <a href="#Portfolio" class="nav-link"></a> Portfolio </li>
-
-        </div>
+        <h1 href="#" class="logo"> Asish-Dewan </h1>
+            <nav>
+                <ul class ="navbar"> 
+                    <li> <a href="#Home"> Home </a></li>
+                    <li> <a href="#About"> About </a></li>
+                    <li> <a href="#Portfolio"> Portfolio </a></li>
+                </ul>
+            </nav> 
+            <a class="cta" href="#"> <button> Contact Me </button></a>
     </header>
-
     <!---------------- Home Section ---------------->
-<section class="home" id="'home"> 
+
+    <section class="home" id="'home"> 
     <div class="social">
         <a href=""> <i class= "bx bxl-github"> </i> </a>
         <a href=""> <i class= "bx bxl-instagram" > </i> </a>
@@ -45,8 +41,8 @@
 
 </section>
 <!-- Home image -->
-<div class="home-img">
-    <img src="./assets/images/B-mo.png" alt= "Profile picture">
+<div class="profile">
+    <img src="./assets/images/B-mo.png" alt= "profile image">
 </div>
 
 <!-- Home content-->
