Added About Me and Portfolio section + updated CSS accordingly

--- a/index.html
+++ b/index.html
@@ -32,29 +32,47 @@
     <!---------------- Home Section ---------------->
 
     <section class="home" id="'home"> 
-    <div class="social">
-        <a href=""> <i class= "bx bxl-github"> </i> </a>
-        <a href=""> <i class= "bx bxl-instagram" > </i> </a>
-        <a href=""> <i class=" bx bxl-facebook-square"></i> </a>
 
-    </div>
-
-</section>
+        <div class="social">
+            <a href=""> <i class= "bx bxl-github"> </i> </a>
+            <a href=""> <i class= "bx bxl-instagram" > </i> </a>
+            <a href=""> <i class=" bx bxl-facebook-square"></i> </a>
+        </div>
 <!-- Home image -->
-<div class="profile">
-    <img src="./assets/images/B-mo.png" alt= "profile image">
-</div>
+        <div class="profile">
+            <img src="./assets/images/B-mo.png" alt= "profile image">
+        </div>
 
 <!-- Home content-->
-<div class="home-text">
-    <span> Hello, I'm </span>
-    <h1> Asish </h1>
-    <h2> Front-end developer </h2>
-    <p> Description </p>
+        <div class="home-text">
+            <span> Hello, I'm </span>
+            <h1> Asish </h1>
+            <h2> Front-end developer </h2>
+            <p> Description </p>
+        </div>
+    </section>
+<!-- About Me section -->
+    <section class="about" id="'about">
+        <div class="heading">
+            <h2> A little about me </h2> 
+        </div>
 
-<!-- Contact button -->
-<a href="" class= "button">Contact Me</a> 
-</div>
+        <div class="about-container">
+            <img src="" alt=""> 
+        </div>
+        <div class="about-text">
+            <p> Short introduction about myself </p>
+        </div>
+    </section>
+<!--  Portfolio Section  -->
+
+    <section class="portfolio" id="'portfolio">
+        <div class="portfolio-img">
+            <img src="" alt="">
+            </div>
+
+    </section>
+
 
 </body>
 
