Fixed nav bar link, updated README, added media screen CSS attribute

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Shortcut icon -->
     <link rel=" " href="" type="image/x-icon ">
 <!--CSS link -->
-    <link rel="stylesheet" href="./assets/style.css">
+<link rel="stylesheet" href="./assets/style.css">
 
 <!---Box Icons-->
 <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -31,7 +31,7 @@
     </header>
     <!---------------- Home Section ---------------->
 
-    <section class="home" id="'home"> 
+    <section class="home" id="Home"> 
 
         <div class="social">
             <a href="https://github.com/asish-dewan"> <i class= "bx bxl-github"> </i> </a>
