Fixed url link for first application image

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <div class="portfolio-content">
             <div class="portfolio-img" >
-                <img src="./assets/images/Refactor HTML and CSS code.png" alt="" href="https://asish-dewan.github.io/bootcamp-challenges-repo/">
+                <a href="https://asish-dewan.github.io/bootcamp-challenges-repo/"> <img src="./assets/images/Refactor HTML and CSS code.png" alt=""> </a>
                 <span> Refactoring HTML and CSS </span>
             </div>
             <div class="portfolio-img" id= "project1">
